[package]
name = "blessstar-native"
version = "1.0.0"
edition = "2021"
description = "BlessStar native addon for config editor - napi-rs bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi6", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
